# 42kl-data-ai

week1/: README.md  main.py
week1/data/1_bronze/: AI & Workflow Automation Associate Job in Kuala Lumpur - Jobstreet.html  AI APPLICATION ENGINEER Job in Kuala Lumpur City Centre, Kuala Lumpur - Jobstreet.html  AI Chatbot Developer Job in Petaling Jaya, Selangor - Jobstreet.html  AI ENGINEER Job in Melaka - Jobstreet.html  AI Engineer (Junior) Job in Petaling Jaya, Selangor - Jobstreet.html  AI Engineer (Python, Gen AI) Job in Cyberjaya, Selangor - Jobstreet.html  AI Engineer (Python, GenAI) Job in Cyberjaya, Selangor - Jobstreet.html  AI Engineer (Solution) Job in Bandar Puteri Puchong, Selangor - Jobstreet.html  AI Engineer Job in Bayan Lepas, Penang - Jobstreet.html  AI Engineer Job in Simpang Ampat, Penang - Jobstreet.html  AI Engineer – Machine Learning & Edge AI (Computer Vision) Job in Kelana Jaya, Selangor - Jobstreet.html  AI Software Engineer Job in Damansara Perdana, Selangor - Jobstreet.html  AI Solution Engineer Job in Taman Desa Cemerlang, Johor - Jobstreet.html  Algorithm Engineer Job in Kuala Lumpur - Jobstreet.html  (+86 more)
week1/data/3_gold/: jobs.db
week1/src/: ingestor.py  loader.py  processor.py  profiler.py
week2/: .gitignore  README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  tag_data.py
week3/: .env.example  README.md  docker-compose.yml  pyproject.toml
week3/backend/: Dockerfile  pyproject.toml
week3/frontend/: Dockerfile  pyproject.toml
week3/frontend/src/: app.py
week3/frontend/src/templates/: chat_page.html
(+17 files in other folders)
